# Octavius

./: .gitignore  README.en.md  README.fr.md  README.md  pyproject.toml  requirements.txt
octavius/: audio.py  main.py
octavius/asr/: base.py  whisper.py
octavius/audio/: devices.py  io.py  vad.py
octavius/config/: settings.py
octavius/config/profiles/: base.yaml  device.pc.yaml
octavius/domain/models/: context.py  intent.py  recording_segment.py  role.py  turn.py  turn_state.py
octavius/domain/models/llm_objects/: __init__.py  llm_chunk.py  llm_response.py
octavius/domain/services/: conversation_history.py  turn_manager.py
octavius/infrastructure/asr/: whisper.py
octavius/infrastructure/audio/: pyaudio_source.py
octavius/infrastructure/llm/: gemini.py
octavius/infrastructure/memory/: in_memory_conversation_store.py
octavius/infrastructure/vad/: vad.py  vad_settings.py
octavius/llm/: gemini_client.py  wrapper.py
octavius/memory/dto/: context.py
octavius/memory/infra/: in_memory_conversation_store.py
octavius/memory/model/: utterance.py
octavius/memory/ports/: conversation_store.py  summarizer.py
octavius/memory/services/: conversation_history.py
octavius/orchestrator/: pipeline.py  states.py
octavius/ports/: asr.py  audio_source.py  conversation_store.py  llm.py  summarizer.py  vad.py
octavius/utils/: audio_utils.py  devices.py  logging.py  pa_errors.py
tests/: conftest.py  test_logging_setup.py
tests/memory/dto/: test_context.py
tests/memory/services/: test_conversation_history_append_no_summarizer.py
utils/: logging.py
(+3 files in other folders)
