[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octavius"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["octavius*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["contract: Contract tests for ports"]